report (Bug #121). [David]

=item *

Fixed the "Log In" button so that the word "In" is antialiased. [Waldo
Jaquith]

=item *

New media can once again be created from a related media element. It was
broken by the switch to autocompleted category selection for new media
documents in 1.11.3. Thanks to Waldo Jaquith and Iván Chavero for the spot
(Bugs #134 and #135). [David]

=back

=head1 Version 1.11.3 (2010-01-28)

=head2 Improvements

=over

=item *

The SFTP mover now respects a port specification in the host name (e.g,
"foo.example.com:22"), just like the FTP mover. Thanks to Iván Chavero for the
report and fix. [David]

=item *

The virtual FTP server now assumes that template files uploaded to it are
encoded in the user's preferred encoding. So if you have Windows gremlins in
your templates, you can set your "Character Set" preference to "CP1252" and it
will just work. Thanks to Phillip Smith for the report (L<Bug
#124|http://bricolage.lighthouseapp.com/projects/29601-bricolage/tickets/124>).
[David]

=item *

Added the C<--without-file> option to F<bric_soap> for use with the C<media
export> command. With this option, the resulting XML file will contain no
C<< <file> >> elements (which normally contain the Base64-encoded content of
the exported media documents). Also, when a media document is updated via
C<bric_soap media update>, if the XML file sent to the server contains no
C<< <file> >> elements, the existing file will be left alone, rather than
deleted. Suggested by Ashlee Caul. [David]

=item *

Added the "and Revert" or "and Delete" option to the "Check In" menu on
desk/My Workspace views. This saves the user from having to click "Edit" and
then "Cancel Checkout" to cancel a checkout. Suggested by Matt Rolf and
Phillip Smith. In order to make this happen, the code that handles canceling
a checkout, which was duplicated nearly verbatim in the callbacks for the
story, media, and template profiles has been factored out into a new class,